tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__Steeleaf-AAAAAAAAAAAAAAAAAAAEhw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1159,
  "prerequisites": [
    1158
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you locate a labyrinth you may find steeleaf in chests inside. This is the best material for a soft mallet for now, however a unique armor out of steeleaf can be made too.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Steeleaf",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1158
  ],
  "rewards": [],
  "tasks": []
}
