tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__ThauminiteHelmet-CAqER5QVQg2Hq9lLZ9zDzg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10670507517468787662,
  "prerequisites": [
    1177
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you improve your Thaumium to Thauminite, you can make this very stylish helmet! Also comes with a very useful 5% vis discount while equipped.\n\nMaybe this new material is useful for wands too?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Thauminite Helmet",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1177
  ],
  "rewards": [],
  "tasks": []
}
